[project]
name = "package-a"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
include = ["README.md"]
package-mode = true
packages = [{include = "package_a"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "^0.115.7"
gunicorn = "23.0.0"
requests = "2.32.3"
uvicorn = {version = "0.34.0", extras = ["standard"]}


[tool.poetry.group.dev.dependencies]
ipykernel = "6.23.1"
ipython = "8.6.0"
mypy = "1.15.0"